src/test/testData/gdscript/external_check/_unresolved_variable.gd
<error descr="Identifier \"y\" not declared in the current scope.">var x = y</error>
